--- a/Lottery-UI/src/app/winners-list/winners-list.component.html
+++ b/Lottery-UI/src/app/winners-list/winners-list.component.html
@@ -1,7 +1,24 @@
+<br>
 <div class="container">
   <div class="row">
     <div class="col-xl">
-      <table  class="table">
+      <h2>List of winners</h2>
+    </div>
+  </div>
+</div>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col-xl">
+      <a class="btn btn-primary" [routerLink]="['/submit-code']">Submit code</a>
+    </div>
+  </div>
+</div>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col-xl">
+      <table class="table">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Full name</th>
